@@ -13,6 +13,7 @@ IUSE="doc +glib iconv optimized-qmake qt3support ssl"
 RDEPEND="sys-libs/zlib
 	glib? ( dev-libs/glib )
 	ssl? ( dev-libs/openssl )
+	!<x11-libs/qt-gui-${PVR}
 	!<x11-libs/qt-4.4.0:4"
 DEPEND="${RDEPEND}
 	dev-util/pkgconfig"
@@ -20,33 +21,37 @@ PDEPEND="qt3support? ( ~x11-libs/qt-gui-${PV}[qt3support] )"
 
 QT4_TARGET_DIRECTORIES="
 src/tools/bootstrap
-src/tools/moc/
-src/tools/rcc/
-src/tools/uic/
-src/corelib/
-src/xml/
-src/network/
-src/plugins/codecs/"
+src/tools/moc
+src/tools/rcc
+src/tools/uic
+src/corelib
+src/xml
+src/network
+src/plugins/codecs
+tools/linguist/lconvert
+tools/linguist/lrelease
+tools/linguist/lupdate"
 
 # Most ebuilds include almost everything for testing
 # Will clear out unneeded directories after everything else works OK
 QT4_EXTRACT_DIRECTORIES="
-include/Qt/
-include/QtCore/
-include/QtNetwork/
-include/QtScript/
-include/QtXml/
+include/Qt
+include/QtCore
+include/QtNetwork
+include/QtScript
+include/QtXml
 src/plugins/plugins.pro
 src/plugins/qpluginbase.pri
 src/src.pro
-src/3rdparty/des/
-src/3rdparty/harfbuzz/
-src/3rdparty/md4/
-src/3rdparty/md5/
-src/3rdparty/sha1/
-src/3rdparty/easing/
-src/script/
-translations/"
+src/3rdparty/des
+src/3rdparty/harfbuzz
+src/3rdparty/md4
+src/3rdparty/md5
+src/3rdparty/sha1
+src/3rdparty/easing
+src/script
+tools/linguist/shared
+translations"
 
 pkg_setup() {
 	qt4-build-edge_pkg_setup
@@ -151,7 +156,7 @@ src_compile() {
 }
 
 src_install() {
-	dobin "${S}"/bin/{qmake,moc,rcc,uic} || die "dobin failed"
+	dobin "${S}"/bin/{qmake,moc,rcc,uic,lconvert,lrelease,lupdate} || die "dobin failed"
 
 	install_directories src/{corelib,xml,network,plugins/codecs}
 
@@ -160,6 +165,10 @@ src_install() {
 	if use doc; then
 		emake INSTALL_ROOT="${D}" install_htmldocs || die "emake install_htmldocs failed"
 	fi
+
+	"${S}"/bin/lrelease translations/*.ts || die "generating translations faied"
+	insinto ${QTTRANSDIR}
+	doins translations/*.qm || die "doins translations failed"
 
 	setqtenv
 	fix_library_files
