@@ -7,7 +7,7 @@ inherit eutils qt4-build-edge
 
 DESCRIPTION="The GUI module for the Qt toolkit"
 SLOT="4"
-KEYWORDS=""
+KEYWORDS="~amd64 ~x86"
 IUSE="+accessibility cups dbus +glib gtk mng nas nis raster tiff qt3support xinerama"
 
 RDEPEND="media-libs/fontconfig
@@ -31,6 +31,7 @@ RDEPEND="media-libs/fontconfig
 	nas? ( >=media-libs/nas-1.5 )
 	tiff? ( media-libs/tiff )
 	xinerama? ( x11-libs/libXinerama )
+	!=x11-libs/qt-qt3support-${PV}
 	"
 DEPEND="${RDEPEND}
 	xinerama? ( x11-proto/xineramaproto )
@@ -40,18 +41,20 @@ PDEPEND="qt3support? ( ~x11-libs/qt-qt3support-${PV}[debug=] )"
 
 QT4_TARGET_DIRECTORIES="
 src/gui
-src/scripttools/
+src/scripttools
 tools/designer
-tools/linguist
+tools/linguist/linguist
 src/plugins/imageformats/gif
 src/plugins/imageformats/ico
 src/plugins/imageformats/jpeg
 src/plugins/inputmethods"
 
 QT4_EXTRACT_DIRECTORIES="
-include/
-src/
-tools/shared/"
+include
+src
+tools/linguist/phrasebooks
+tools/linguist/shared
+tools/shared"
 
 pkg_setup() {
 	if ! use qt3support; then
